Improve market data query and chart formatting
Backend: change CoinMarketDataRepository JPQL to use a subquery so LIMIT and ordering behave correctly and outer results are ordered by marketCapRank; minor formatting tweaks. Update CoinMarketDataService to use Stream.toList() and small spacing changes.

Frontend: PriceChart.tsx - adjust y-axis min/max calculation to avoid thousand-rounding, refine tooltip value formatting to show precise decimals (remove 'k' shorthand), increase tooltip width, and minor cleanup. data.ts - add getHistoryChart import and call, and adjust basePrice calculation to include price change (currentPrice + priceChange24h). These changes aim to correct backend result selection and improve accuracy/precision of chart display.